ingress/00-cruisecontrol-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cruise-control
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - cruisecontrolpoc.40.127.150.100.xip.io
    secretName: cruisecontrol-poc-tls-secret
  rules:
  - host: cruisecontrolpoc.40.127.150.100.xip.io
    http:
      paths:
      - backend:
          serviceName: kafka-poc-cruisecontrol-svc
          servicePort: 8090
  - host: cruisecontrol.ursos.pt
    http:
      paths:
      - backend:
          serviceName: kafka-poc-cruisecontrol-svc
          servicePort: 8090
