ingress/10-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - prometheuspoc.40.127.150.100.xip.io
    secretName: prometheus-poc-tls-secret
  rules:
  - host: prometheuspoc.40.127.150.100.xip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-prometheus
          servicePort: 9090
  - host: prometheus.ursos.pt
    http:
      paths:
      - backend:
          serviceName: prometheus-prometheus
          servicePort: 9090
